<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportUserActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="com.example.cpen321project.HeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="-60dp" />

    <TextView
        android:id="@+id/reportUserText"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:padding="16dp"
        android:text="@string/select_a_reason_for_reporting_this_user"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/user_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reason_spinner" />

    <Spinner
        android:id="@+id/reason_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reportUserText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/report_reasons"
        android:padding="8dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_border"
            android:gravity="top|start"
            android:hint="@string/the_reason_for_this_report_is"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/user_spinner"
            tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#F00000"
        android:padding="15dp"
        android:text="@string/submit_report"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#505050"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/report_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
